# WIZnet-PICO-v6-FREERTOS-C

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/W6300_RTOS_CHIP_READ/: CMakeLists.txt  README.md  W6300_RTOS_CHIP_READ.c
examples/w6300_tcp_client_over_ssl/: CMakeLists.txt  w6300_tcp_client_over_ssl.c
libraries/: CMakeLists.txt
port/: CMakeLists.txt
port/FreeRTOS-Kernel/inc/: FreeRTOSConfig.h
port/io6Library/inc/: w6x00_gpio_irq.h  w6x00_spi.h  wizchip_pio_spi.h  wizchip_timer.h
port/io6Library/src/: w6x00_spi.c  wizchip_pio_spi.c  wizchip_pio_spi.pio  wizchip_timer.c
port/mbedtls/inc/: ssl_config.h
static/documents/: getting_started.md
